--- a/backend/ListaDeTarefas/ListaDeTarefas.Api/ListaDeTarefas.Api.csproj
+++ b/backend/ListaDeTarefas/ListaDeTarefas.Api/ListaDeTarefas.Api.csproj
@@ -9,6 +9,10 @@
     <ItemGroup>
         <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Scalar.AspNetCore" Version="2.6.1" />
     </ItemGroup>
 
