--- a/backend/ListaDeTarefas/docker-compose.yml
+++ b/backend/ListaDeTarefas/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   sqlserver:
-    image: mcr.microsoft.com/mssql/server:2022-lts
+    image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: sqlserver
     restart: always
     environment:
-      SA_PASSWORD: "lista@tarefas"
+      SA_PASSWORD: "lista@tarefas1"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
